# MC937-Project

./: .gitignore  CMakeLists.txt  main.cpp  ttt.cpp
book2/source/: material.mtl
data/bed/source/: material.mtl
data/book1/source/: material.mtl
data/book2/source/: material.mtl
data/bulb/source/: material.mtl
data/lampshader/source/: material.mtl
data/nightstand/source/: Untitled.mtl  material.mtl
data/room/source/: material.mtl
data/table/source/: material.mtl
shaders/: aabb.fs.shader  fragment.shader  fragment_light.shader  vertex.shader
utils/: camera.hpp  collision.hpp  mesh.hpp  model.hpp  read_obj_file.hpp  shaders.hpp
